turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: type mismatch;
 found   : Int
 required: java.awt.Color
			c=(i+1)
                            ^LangtonsAnt:13: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
				c=0
                                  ^