turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	var c:Color=getCouleurSol()
	for (i<- 0 to colors.length-1) {
		if (c==colors(i)) {
			if (rule(i)=="R") {
				droite()
			} else {
				gauche()
			}
			c=(i+1)
			if (c==colors.length) {
				c=0
			}
			setCouleurBrosse(colors((i+1)%(colors.length)))
			baisseBrosse()
			leveBrosse()
			avance()
		}
	}
}
